--- a/JMDKH.ipynb
+++ b/JMDKH.ipynb
@@ -45,7 +45,7 @@
         "    loadingAn,\n",
         ")\n",
         "\n",
-        "REPO = \"https://github.com/sahilgit55/jmdkh-mltb.git\"\n",
+        "REPO = \"https://github.com/sisakoy/jmdeguzman.git\"\n",
         "CD = REPO.split(\"/\")[-1].replace(\".git\", \"\")\n",
         "\n",
         "# loadingAn()\n",
